# data_science_main

./: hello.py  pyproject.toml
hockey-pd/: .gitignore  pyproject.toml
hockey-pd/data/interim/: birth_dates.pkl  master.pkl  master_score.pkl  scoring.pkl  scoring_multi_index.pkl  team_splits.pkl  team_splits_date_index.pkl  team_splits_multi_index.pkl  teams.pkl  teams_team_splits.pkl
hockey-pd/helpers/: memory.py
hockey-pd/notebooks/: handling_time_series.ipynb  joining_multiple_data_tables.ipynb  moving_between_wide_and_long.ipynb  multi_level_indexes.ipynb  plotting.ipynb  preperaing_dataset.ipynb  windows.ipynb
mastercard/: Makefile  README.md  pyproject.toml
mastercard/docs/: mkdocs.yml
mastercard/docs/docs/: index.md
mastercard/mastercard/: __init__.py
mastercard/mastercard/utils/: parqouet_converter.py
mastercard/mastercard/visualisation/: categorical_data.py  numerical_data.py
mastercard/notebooks/: 1.0-mw-eda-transactions.ipynb  1.1-mw-transaction-geo-analysis.ipynb  1.2-mw-eda-merchants.ipynb  1.3-mw-eda-users.ipynb  1.4-mw-eda-all.ipynb  2.0-mw-data-preprocesing.ipynb  3.0-mw-model-training.ipynb
preparing_data_for_ml/: LICENSE  Makefile  README.md  main.py  pyproject.toml
preparing_data_for_ml/docs/: mkdocs.yml
preparing_data_for_ml/docs/docs/: index.md
preparing_data_for_ml/notebooks/: data_processing.ipynb  univariate_feature_imputation.ipynb
preparing_data_for_ml/preparing_data_for_m;/: __init__.py  dataset.py  features.py  plots.py
preparing_data_for_ml/preparing_data_for_m;/modeling/: predict.py  train.py
