[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mastercard"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "marcin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "legacy-cgi; python_version >= '3.13'",
    "jupyterlab>=4.4.3",
    "legacy-cgi",
    "loguru",
    "mkdocs",
    "numpy<2.2",
    "pandas>=2.2.3",
    "pip",
    "pyarrow>=20.0.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "seaborn<0.14",
    "tqdm",
    "typer",
    "ydata-profiling==4.16",
    "matplotlib>=3.10.0",
    "ipywidgets>=8.1.7",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.2",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mastercard"]
include = ["pyproject.toml", "mastercard/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mastercard"]
force-sort-within-sections = true

